--- a/sample16.htm
+++ b/sample16.htm
@@ -16,7 +16,7 @@
         init: function () {
           const el = this.el;
           el.addEventListener("collidestart", function () {
-            console.log("Õ“Ë");
+            console.log("è¡çª");
             el.setAttribute("color", "red");
           });
         }
@@ -39,7 +39,7 @@
           ) {
             txt.setAttribute("value", "");
           });
-        }, //ƒJƒ“ƒ}‚ª•K—vI
+        }, //ã‚«ãƒ³ãƒžãŒå¿…è¦ï¼
         //called evry frame
         tick: function () {}
       });
@@ -67,7 +67,7 @@
         color="green"
       ></a-box>
 
-      <!-- ° -->
+      <!-- åºŠ -->
       <a-plane
         ammo-body="type: static"
         ammo-shape="type: box"
@@ -77,7 +77,7 @@
         color="blue"
       ></a-plane>
 
-      <!-- ƒRƒ“ƒgƒ[ƒ‰[ -->
+      <!-- ã‚³ãƒ³ãƒˆãƒ­ãƒ¼ãƒ©ãƒ¼ -->
       <a-entity
         id="ctlL"
         laser-controls="hand: left"
@@ -93,12 +93,12 @@
         vr-controller
       ></a-entity>
 
-      <!-- ƒJƒƒ‰ -->
+      <!-- ã‚«ãƒ¡ãƒ© -->
       <a-entity position="0 1 10" rotation="0 0 0">
         <a-camera position="0 0 0"></a-camera>
       </a-entity>
 
-      <!-- ƒeƒLƒXƒg•\Ž¦ -->
+      <!-- ãƒ†ã‚­ã‚¹ãƒˆè¡¨ç¤º -->
       <a-text
         id="txt"
         value="Move controllers!!"
